--- a/index.html
+++ b/index.html
@@ -112,7 +112,12 @@
           <h2 class="works-title">Чем мы занимаемся</h2>
           <ul class="list works-list">
             <li class="works-item">
-              <img src="./images/img1.jpg" alt="Работа на клавиатуре" width="370" height="294" />
+              <div class="works-desctop">
+                <img src="./images/img1.jpg" alt="Работа на клавиатуре" width="370" height="294" />
+              </div>
+              <div class="works-desctop-text">
+                <p class="works-text">Десктопные приложения</p>
+              </div>
             </li>
             <li class="works-item">
               <img src="./images/img2.jpg" alt="Монитор" width="370" height="294" />
