--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <li class="adress-item">
               <a class="adress-link link" href="mailto:info@devstudio.com">
                 <svg class="adress-icon" width="16" height="12">
-                  <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+                  <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com
+                </a>
             </li>
             <li class="adress-item">
               <a class="adress-link link" href="tel:+380961111111">
@@ -112,18 +113,22 @@
           <h2 class="works-title">Чем мы занимаемся</h2>
           <ul class="list works-list">
             <li class="works-item">
-              <div class="works-desctop">
-                <img src="./images/img1.jpg" alt="Работа на клавиатуре" width="370" height="294" />
-              </div>
+              <img src="./images/img1.jpg" alt="Работа на клавиатуре" width="370" height="294" />
               <div class="works-desctop-text">
                 <p class="works-text">Десктопные приложения</p>
               </div>
             </li>
             <li class="works-item">
               <img src="./images/img2.jpg" alt="Монитор" width="370" height="294" />
+              <div class="works-desctop-text">
+                <p class="works-text">Мобильные приложения</p>
+              </div>
             </li>
             <li class="works-item">
               <img src="./images/img3.jpg" alt="Планшет" width="370" height="294" />
+              <div class="works-desctop-text">
+                <p class="works-text">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
