--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             ><span class="logo-first link">Web</span><span class="logo-second link">Studio</span></a
           >
           <ul class="list menu-list">
-            <li class="menu-item"><a class="menu-link link current" href="#">Студия</a></li>
+            <li class="menu-item">
+              <a class="menu-link link current" href="#">Студия</a></li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Портфолио</a>
             </li>
@@ -54,7 +55,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-main">Эффективные решения<br />для вашего бизнеса</h1>
-          <button class="button btn-bold" type="button">Заказать услугу</button>
+          <button class="button btn-bold" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <section class="section">
@@ -405,5 +406,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="btn-modal" data-modal-close>
+        <svg width="18" height="18">
+          <use href="./images/icons.svg#icon-close-black"></use>
+        </svg>
+      </button>
+      </div>
+    </div>
+    <script src="/js/modal.js"></script>
   </body>
 </html>
