--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,17 @@
     <title lang="en">Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -16,7 +25,8 @@
       <div class="container header-container">
         <nav class="header-nav">
           <a class="logo header-logo link" href="#" lang="en"
-            ><span class="logo-first link">Web</span><span class="logo-second link">Studio</span></a>
+            ><span class="logo-first link">Web</span><span class="logo-second link">Studio</span></a
+          >
           <ul class="list menu-list">
             <li class="menu-item"><a class="menu-link link" href="./index.html">Студия</a></li>
             <li class="menu-item">
@@ -34,7 +44,8 @@
           <li class="adress-item">
             <a class="adress-link link" href="tel:+380961111111">
               <svg class="adress-icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -63,7 +74,16 @@
           <ul class="list project-list">
             <li class="projects-item">
               <a class="link project-link" href="#">
-                <img src="./images/employees.jpg" alt="Технокряк" width="370" height="294" />
+                <div class="project-image-wrap">
+                  <img src="./images/employees.jpg" alt="Технокряк" width="370" height="294" />
+                  <div class="project-overlay">
+                    <p class="project-overlay-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="projects-container">
                   <h2 class="projects-title">Технокряк</h2>
                   <p class="project-text">Веб-сайт</p>
@@ -72,7 +92,21 @@
             </li>
             <li class="projects-item">
               <a class="link project-link" href="#">
-                <img src="./images/New_Orlean_vs_Golden_Star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294"/>
+                <div class="project-image-wrap">
+                <img
+                  src="./images/New_Orlean_vs_Golden_Star.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-overlay">
+                  <p class="project-overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="projects-container">
                   <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
                   <p class="project-text">Дизайн</p>
@@ -81,8 +115,17 @@
             </li>
             <li class="projects-item">
               <a class="link project-link" href="#">
+                <div class="project-image-wrap">
                 <img src="./images/Seafood.jpg" alt="Ресторан Seafood" width="370" height="294" />
-                <div class="projects-container">
+                <div class="project-overlay">
+                  <p class="project-overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+              </div>
+              <div class="projects-container">
                   <h2 class="projects-title">Ресторан Seafood</h2>
                   <p class="project-text">Приложение</p>
                 </div>
@@ -90,8 +133,17 @@
             </li>
             <li class="projects-item">
               <a class="link project-link" href="#">
+                <div class="project-image-wrap">
                 <img src="./images/Prime.jpg" alt="Проект Prime" width="370" height="294" />
-                <div class="projects-container">
+                <div class="project-overlay">
+                  <p class="project-overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+              </div>
+              <div class="projects-container">
                   <h2 class="projects-title">Проект Prime</h2>
                   <p class="project-text">Маркетинг</p>
                 </div>
@@ -99,8 +151,17 @@
             </li>
             <li class="projects-item">
               <a class="link project-link" href="#">
+                <div class="project-image-wrap">
                 <img src="./images/Boxes.jpg" alt="Проект Boxes" width="370" height="294" />
-                <div class="projects-container">
+                <div class="project-overlay">
+                  <p class="project-overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+              </div>
+              <div class="projects-container">
                   <h2 class="projects-title">Проект Boxes</h2>
                   <p class="project-text">Приложение</p>
                 </div>
@@ -108,7 +169,21 @@
             </li>
             <li class="projects-item">
               <a class="link project-link" href="#">
-                <img src="./images/Inspiration.jpg" alt="Inspiration has no Borders" width="370" height="294"/>
+                <div class="project-image-wrap">
+                <img
+                  src="./images/Inspiration.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-overlay">
+                  <p class="project-overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="projects-container">
                   <h2 class="projects-title" lang="en">Inspiration has no Borders</h2>
                   <p class="project-text">Веб-сайт</p>
@@ -117,7 +192,21 @@
             </li>
             <li class="projects-item">
               <a class="link project-link" href="#">
-                <img src="./images/Limited_Edition.jpg" alt="Издание Limited Edition" width="370" height="294"/>
+                <div class="project-image-wrap">
+                <img
+                  src="./images/Limited_Edition.jpg"
+                  alt="Издание Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-overlay">
+                  <p class="project-overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="projects-container">
                   <h2 class="projects-title">Издание Limited Edition</h2>
                   <p class="project-text">Дизайн</p>
@@ -126,7 +215,16 @@
             </li>
             <li class="projects-item">
               <a class="link project-link" href="#">
+                <div class="project-image-wrap">
                 <img src="./images/LAB.jpg" alt="Проект LAB" width="370" height="294" />
+                <div class="project-overlay">
+                  <p class="project-overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="projects-container">
                   <h2 class="projects-title">Проект LAB</h2>
                   <p class="project-text">Маркетинг</p>
@@ -135,11 +233,25 @@
             </li>
             <li class="projects-item">
               <a class="link project-link" href="#">
-                <img src="./images/Growing_Business.jpg" alt="Growing Business" width="370" height="294"/>
+                <div class="project-image-wrap">
+                <img
+                  src="./images/Growing_Business.jpg"
+                  alt="Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-overlay">
+                  <p class="project-overlay-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="projects-container">
                   <h2 class="projects-title" lang="en">Growing Business</h2>
                   <p class="project-text">Приложение</p>
-              </div>
+                </div>
               </a>
             </li>
           </ul>
@@ -149,30 +261,32 @@
     <footer class="footer-hero">
       <div class="container footer-container">
         <div class="address-container">
-          <a class="logo footer-logo" href="./index.html" lang="en"><span class="logo-first">Web</span><span class="logo-third">Studio</span></a>
+          <a class="logo footer-logo" href="./index.html" lang="en"
+            ><span class="logo-first">Web</span><span class="logo-third">Studio</span></a
+          >
           <address class="address">
-          <ul class="footer-adress list">
-            <li class="footer-item">
-              <a
-                class="footer-address-link link"
-                href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-address-list link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-address-list link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div class="join-container">
+            <ul class="footer-adress list">
+              <li class="footer-item">
+                <a
+                  class="footer-address-link link"
+                  href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-address-list link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-address-list link" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="join-container">
           <p class="connect-text">присоединяйтесь</p>
           <ul class="list connect-list">
             <li class="connect-item">
