--- a/portfolio.html
+++ b/portfolio.html
@@ -262,8 +262,7 @@
       <div class="container footer-container">
         <div class="address-container">
           <a class="logo footer-logo" href="./index.html" lang="en"
-            ><span class="logo-first">Web</span><span class="logo-third">Studio</span></a
-          >
+            ><span class="logo-first">Web</span><span class="logo-third">Studio</span></a>
           <address class="address">
             <ul class="footer-adress list">
               <li class="footer-item">
@@ -272,8 +271,7 @@
                   href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
+                  >г. Киев, пр-т Леси Украинки, 26</a>
               </li>
               <li class="footer-item">
                 <a class="footer-address-list link" href="mailto:info@example.com"
