--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           >
           <ul class="list menu-list">
             <li class="menu-item">
-              <a class="menu-link link current" href="#">Студия</a></li>
+              <a class="menu-link link current" href="#">Студия</a>
+            </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Портфолио</a>
             </li>
@@ -37,19 +38,19 @@
           </ul>
         </nav>
         <ul class="list adress-list">
-            <li class="adress-item">
-              <a class="adress-link link" href="mailto:info@devstudio.com">
-                <svg class="adress-icon" width="16" height="12">
-                  <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com
-                </a>
-            </li>
-            <li class="adress-item">
-              <a class="adress-link link" href="tel:+380961111111">
-                <svg class="adress-icon" width="10" height="16">
-                  <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </div>
+          <li class="adress-item">
+            <a class="adress-link link" href="mailto:info@devstudio.com">
+              <svg class="adress-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com
+            </a>
+          </li>
+          <li class="adress-item">
+            <a class="adress-link link" href="tel:+380961111111">
+              <svg class="adress-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
       <section class="hero">
@@ -305,41 +306,45 @@
           <ul class="list client-list">
             <li class="client-item">
               <a href="" class="client-link">
-              <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo1"></use>
-              </svg>
-            </a>
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo1"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
               <a href="" class="client-link">
                 <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo2"></use>
-              </svg>
-            </a>
+                  <use href="./images/icons.svg#icon-Logo2"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo3"></use>
-              </svg>
-            </a>
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo3"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo4"></use>
-              </svg>
-            </a>
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo4"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo5"></use>
-              </svg>
-            </a>
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo5"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo6"></use>
-              </svg>
-            </a>
+              <a href="" class="client-link"
+                ><svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -348,30 +353,32 @@
     <footer class="footer-hero">
       <div class="container footer-container">
         <div class="address-container">
-          <a class="logo footer-logo" href="./index.html" lang="en"><span class="logo-first">Web</span><span class="logo-third">Studio</span></a>
+          <a class="logo footer-logo" href="./index.html" lang="en"
+            ><span class="logo-first">Web</span><span class="logo-third">Studio</span></a
+          >
           <address class="address">
-          <ul class="footer-adress list">
-            <li class="footer-item">
-              <a
-                class="footer-address-link link"
-                href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-address-list link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-address-list link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div class="join-container">
+            <ul class="footer-adress list">
+              <li class="footer-item">
+                <a
+                  class="footer-address-link link"
+                  href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-address-list link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-address-list link" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="join-container">
           <p class="connect-text">присоединяйтесь</p>
           <ul class="list connect-list">
             <li class="connect-item">
@@ -409,10 +416,10 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="btn-modal" data-modal-close>
-        <svg width="18" height="18">
-          <use href="./images/icons.svg#icon-close-black"></use>
-        </svg>
-      </button>
+          <svg width="18" height="18">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <script src="/js/modal.js"></script>
