--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
       <div class="container header-container">
         <nav class="header-nav">
           <a class="logo header-logo link" href="#" lang="en"
-            ><span class="logo-first link">Web</span><span class="logo-second link">Studio</span></a
-          >
+            ><span class="logo-first link">Web</span><span class="logo-second link">Studio</span></a>
           <ul class="list menu-list">
             <li class="menu-item">
               <a class="menu-link link current" href="#">Студия</a>
@@ -326,22 +325,19 @@
               </a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"
-                ><svg class="client-icon" width="106" height="60">
+              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"
-                ><svg class="client-icon" width="106" height="60">
+              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
-              <a href="" class="client-link"
-                ><svg class="client-icon" width="106" height="60">
+              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-Logo6"></use>
                 </svg>
               </a>
@@ -354,23 +350,14 @@
       <div class="container footer-container">
         <div class="address-container">
           <a class="logo footer-logo" href="./index.html" lang="en"
-            ><span class="logo-first">Web</span><span class="logo-third">Studio</span></a
-          >
+            ><span class="logo-first">Web</span><span class="logo-third">Studio</span></a>
           <address class="address">
             <ul class="footer-adress list">
               <li class="footer-item">
-                <a
-                  class="footer-address-link link"
-                  href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
+                <a class="footer-address-link link" href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
               </li>
               <li class="footer-item">
-                <a class="footer-address-list link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+                <a class="footer-address-list link" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li class="footer-item">
                 <a class="footer-address-list link" href="tel:+380991111111">+38 099 111 11 11</a>
